[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/menu/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/buttons/button_disabled.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/button_hovered.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/button_pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/buttons/button_basic.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Antonio-Light.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ui/keys/keys.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/sound/select.mp3" type="AudioStream" id=8]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=9]

[sub_resource type="DynamicFont" id=1]
size = 124
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="Animation" id=5]
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0823529, 0.0117647, 0.0117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -197.0
margin_top = -281.0
margin_right = 197.0
margin_bottom = -119.0
theme = SubResource( 2 )
text = "The Drill"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -115.0
margin_right = 30.0
margin_bottom = -93.0
theme = ExtResource( 9 )
text = "(That's all)"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = 285.0
margin_right = 136.0
margin_bottom = 307.0
theme = ExtResource( 9 )
text = "A game for the 48th Ludum Dare by DreamTeck"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -30.0
margin_right = 117.0
margin_bottom = 30.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="StartButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -21.0
margin_right = 84.0
margin_bottom = 21.0
theme = SubResource( 4 )
text = "START THE DRILL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 74.0
margin_right = 117.0
margin_bottom = 134.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 3 )
texture_disabled = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ControlsButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -84.0
margin_top = -21.0
margin_right = 84.0
margin_bottom = 21.0
theme = SubResource( 4 )
text = "CONTROLS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" parent="." instance=ExtResource( 7 )]
visible = false

[node name="FadeIn" type="ColorRect" parent="."]
modulate = Color( 0, 0, 0, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="FadeIn"]
anims/fadein = SubResource( 5 )

[node name="ButtonAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="animation_finished" from="FadeIn/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
